# Tutorials

./: README.md
tutorials/Tutorial_001/: R_for_Beginners.R
tutorials/Tutorial_002/: README.md  annotation.csv  proteomics_analysis.R  setup.R
tutorials/Tutorial_003/: .gitignore  README.md  pyproject.toml
tutorials/Tutorial_003/cool_analysis/: __init__.py  analysis.py
tutorials/Tutorial_003/cool_analysis/calc/: calc_answer.py
