[build-system]
requires = ["setuptools>=66", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cool_analysis"
description = "A cool analysis"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "Philipp Junk", email = "philipp.junk@ucd.ie"},
]
maintainers = [
  {name = "Philipp Junk", email = "philipp.junk@ucd.ie"},
]
classifiers = [
  "Programming Language :: Python",
]

dynamic = ["version"]

dependencies = [
  "numpy >= 1.24",
]

[tool.setuptools.packages.find]
exclude = [".tox*"]

[tool.setuptools.dynamic]
version = {attr = "cool_analysis.__version__"}
